Update README.adoc file and library.properties
- Fix bad link in "url" field of library.properties file
- Fix typing mistake in README.adoc file

Signed-off-by: Biagio Montaruli <biagio.hkr@gmail.com>

--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = Led Library for Arduino/Genuno boards =
 
-This library allows an Arduino/Genuino board to use the builit led or
+This library allows an Arduino/Genuino board to use the built-in led or
 one or more leds attached to Arduino pins
 
 == License ==
