Update library name and related files
- Change library name to LedBlinky because the prevoius name 'Led' was
  a bit generic and to avoid name collision with other Arduino libraries
- Update documentation and sketches that use the old library name
- Change the class name from 'Led' to 'LedBlinky'
- Update the name of the source code files

Signed-off-by: Biagio Montaruli <biagio.hkr@gmail.com>

--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,6 @@
-= Led Library for Arduino/Genuno boards =
+= LedBlinky library for Arduino/Genuino boards =
 
-This library allows an Arduino/Genuino board to use the built-in led or
-one or more leds attached to Arduino pins
+This library allows an Arduino/Genuino board to control leds attached to Arduino pins
 
 == License ==
 
